--- a/less/blocks/main-menu.less
+++ b/less/blocks/main-menu.less
@@ -5,6 +5,11 @@
 
 .main-menu__items {
   margin-right: 25px;
+
+  &--active a {
+    color: @red;
+    text-decoration: none;
+  }
 }
 
 .main-menu__link {
