--- a/less/blocks/promo.less
+++ b/less/blocks/promo.less
@@ -6,7 +6,7 @@
 
 .promo__heading {
   margin: 0 0 20px 0;
-  width: 544px;
+  width: 543px;
   text-align: left;
   font-weight: 300;
   font-size: 52px;
@@ -30,11 +30,13 @@
   align-items: center;
 }
 
-.promo__video-text {
+.promo__video-link {
+  display: block;
   position: relative;
   padding-left: 57px;
   margin: 0;
   color: @red;
+  text-decoration: none;
 
   &::before {
     position: absolute;
@@ -60,7 +62,3 @@
   }
 }
 
-.promo-video__link {
-  color: @red;
-  text-decoration: none;
-}
