--- a/less/style.less
+++ b/less/style.less
@@ -3,7 +3,7 @@
 @import "global/mixins.less";
 @import "global/variables.less";
 
-@import "blocks/header.less";
+@import "blocks/main-header.less";
 @import "blocks/nav.less";
 @import "blocks/main-menu.less";
 @import "blocks/promo.less";
@@ -15,3 +15,13 @@
 @import "blocks/phone.less";
 @import "blocks/footer-top.less";
 @import "blocks/footer-low.less";
+@import "blocks/sub-nav.less";
+@import "blocks/description.less";
+@import "blocks/details-container.less";
+@import "blocks/detail-card.less";
+@import "blocks/materials-container.less";
+@import "blocks/material-card.less";
+@import "blocks/services-container.less";
+@import "blocks/services-card.less";
+@import "blocks/gallery-container.less";
+@import "blocks/gallery-card.less";
