--- a/less/global/global-styles.less
+++ b/less/global/global-styles.less
@@ -48,3 +48,10 @@ ul {
   color: @red;
   font-size: 16px;
 }
+
+.main-heading {
+  font-size: 52px;
+  line-height: 61px;
+  font-weight: 300;
+  text-align: center;
+}
