--- a/less/style.less
+++ b/less/style.less
@@ -25,3 +25,4 @@
 @import "blocks/services-card.less";
 @import "blocks/gallery-container.less";
 @import "blocks/gallery-card.less";
+@import "blocks/article-card.less";
