added about-nav and contacts-nav

--- a/less/style.less
+++ b/less/style.less
@@ -3,26 +3,58 @@
 @import "global/mixins.less";
 @import "global/variables.less";
 
+// common-files
 @import "blocks/main-header.less";
 @import "blocks/nav.less";
 @import "blocks/main-menu.less";
-@import "blocks/promo.less";
-@import "blocks/about.less";
-@import "blocks/callback-form.less";
-@import "blocks/features.less";
 @import "blocks/logo.less";
 @import "blocks/footer.less";
 @import "blocks/phone.less";
 @import "blocks/footer-top.less";
 @import "blocks/footer-low.less";
 @import "blocks/sub-nav.less";
+
+// main-index
+@import "blocks/promo.less";
+@import "blocks/about.less";
+@import "blocks/callback-form.less";
+@import "blocks/features.less";
+
+//products-nav
 @import "blocks/description.less";
+
+//products-nav/details
 @import "blocks/details-container.less";
 @import "blocks/detail-card.less";
+
+//products-nav/materials
 @import "blocks/materials-container.less";
 @import "blocks/material-card.less";
+
+//products-nav/services
 @import "blocks/services-container.less";
 @import "blocks/services-card.less";
+
+// gallery-nav
 @import "blocks/gallery-container.less";
 @import "blocks/gallery-card.less";
 @import "blocks/article-card.less";
+
+// about-nav
+@import "blocks/about-company-welcome.less";
+@import "blocks/about-company-wrapper.less";
+@import "blocks/about-company.less";
+@import "blocks/management.less";
+
+// contacts-nav
+@import "blocks/map.less";
+@import "blocks/contacts-content.less";
+@import "blocks/contacts-details.less";
+
+// contacts-nav/contacts
+@import "blocks/contacts-nav-heading.less";
+@import "blocks/contacts-wrapper.less";
+@import "blocks/coworker.less";
+
+// contacts-nav/requisites
+@import "blocks/requisites.less";
