--- a/less/blocks/sub-nav.less
+++ b/less/blocks/sub-nav.less
@@ -2,6 +2,10 @@
   display: flex;
   margin-top: 50px;
   justify-content: space-between;
+
+  &--contacts-nav {
+    justify-content: center;
+  }
 }
 
 .sub-nav__list {
