--- a/less/global/global-styles.less
+++ b/less/global/global-styles.less
@@ -9,8 +9,12 @@ body {
   font-size: 16px;
   line-height: 16px;
   color: @text-color;
+  background-color: #F8F9FB;
 }
 
+.about-company-bg {
+  background-color: #FFFFFF;
+}
 
 img {
   max-width: 100%;
@@ -21,6 +25,17 @@ ul {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 
@@ -41,6 +56,11 @@ ul {
   text-decoration: none;
   border-radius: 6px;
 }
+
+.sub-btn {
+
+}
+
 
 .link {
   display: block;
