--- a/less/blocks/gallery-card.less
+++ b/less/blocks/gallery-card.less
@@ -2,6 +2,7 @@
   margin-right: 32px;
   margin-bottom: 50px;
 
+
   &--margin-none {
     margin-right: 0;
   }
@@ -20,6 +21,7 @@
 
 .gallery-card__img {
   border-radius: 5px;
+  box-shadow: -2px 5px 24px -3px rgba(0,0,0,0.65);
 }
 
 .gallery-card__date {
