--- a/less/blocks/article-card.less
+++ b/less/blocks/article-card.less
@@ -2,6 +2,8 @@
   padding: 50px;
   margin-bottom: 30px;
   background-color: #FFFFFF;
+  box-shadow: -2px 5px 24px -3px rgba(0,0,0,0.65);
+  border-radius: 10px;
 }
 
 .article-card__link {
