--- a/less/blocks/detail-card.less
+++ b/less/blocks/detail-card.less
@@ -2,9 +2,15 @@
   width: 360px;
   margin-right: 30px;
   margin-bottom: 50px;
+  border-radius: 10px;
+  box-shadow: -2px 5px 24px -3px rgba(0,0,0,0.65);
 
   &:nth-child(3n) {
     margin-right: 0;
+  }
+
+  &:hover, :focus {
+    box-shadow: -2px 5px 34px 9px rgba(0,0,0,0.65);
   }
 }
 
