--- a/less/blocks/material-card.less
+++ b/less/blocks/material-card.less
@@ -2,6 +2,9 @@
   width: 555px;
   margin-right: 30px;
   margin-bottom: 50px;
+  box-shadow: -2px 5px 24px -3px rgba(0,0,0,0.65);
+  background-color: #FFFFFF;
+  border-radius: 10px;
 
   &:nth-child(2n+1) {
     margin-right: 0;
@@ -13,6 +16,7 @@
     align-items: center;
     flex-basis: 100%;
     margin-bottom: 70px;
+    padding: 50px 40px;
   }
 
 }
@@ -50,6 +54,7 @@
 
 .material-card__img {
   border-radius: 5px;
+
   &--first {
     margin-bottom: 30px;
   }
