--- a/less/blocks/services-card.less
+++ b/less/blocks/services-card.less
@@ -1,7 +1,11 @@
 .services-card {
   width: 555px;
+  padding-bottom: 45px;
   margin-right: 30px;
   margin-bottom: 50px;
+  box-shadow: -2px 5px 24px -3px rgba(0,0,0,0.65);
+  background-color: #FFFFFF;
+  border-radius: 10px;
 
   &:nth-child(2n+1) {
     margin-right: 0;
