--- a/less/blocks/sub-nav.less
+++ b/less/blocks/sub-nav.less
@@ -14,9 +14,11 @@
 }
 
 .sub-nav__item {
-  border: 1px solid @light-grey;
+ // border: 1px solid @light-grey;
   border-radius: 50px;
   margin-right: 25px;
+  background-color: #FFFFFF;
+  box-shadow: 9px 8px 31px -10px rgba(0,0,0,0.98);
 
   &--active {
     border-color: @red;
@@ -31,6 +33,14 @@
   padding: 15px 30px;
   text-decoration: none;
   color: @light-grey;
+  border-radius: 50px;
+
+  &:hover, &:focus {
+    outline: none;
+    background-color: @red;
+    color: @white;
+  }
+
 }
 
 .sub-nav__input {
@@ -39,6 +49,7 @@
   height: 42px;
   border-radius: 50px;
   padding: 0 15px 0;
+  border: 2px solid rgba(156, 156, 156, 0.5);
 
 }
 
