--- a/less/blocks/material-card.less
+++ b/less/blocks/material-card.less
@@ -1,5 +1,5 @@
 .material-card {
-  width: 555px;
+  width: 48%;
   margin-right: 30px;
   margin-bottom: 50px;
   box-shadow: -2px 5px 24px -3px rgba(0,0,0,0.65);
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex-basis: 100%;
+    flex-basis: 99%;
     margin-bottom: 70px;
     padding: 50px 40px;
   }
