--- a/less/blocks/services-card.less
+++ b/less/blocks/services-card.less
@@ -1,5 +1,5 @@
 .services-card {
-  width: 555px;
+  width: 48%;
   padding-bottom: 45px;
   margin-right: 30px;
   margin-bottom: 50px;
@@ -15,7 +15,7 @@
    // display: flex;
    // flex-direction: column;
    // align-items: center;
-    flex-basis: 100%;
+    flex-basis: 99%;
   }
 
 }
