--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -1,5 +1,19 @@
+.footer {
+ // background-color: @white;
+}
+
 .footer__wrapper {
   .wrapper-wide();
   padding-top: 100px;
   padding-bottom: 60px;
+}
+
+.footer a {
+  text-decoration: none;
+  border-bottom: 1px solid rgba(176,28,50,.3);
+
+  &:hover, &:focus {
+    color: rgba(176,28,50,.6);
+    border-bottom: 1px solid rgba(176,28,50,.3);
+  }
 }
