--- a/less/style.less
+++ b/less/style.less
@@ -1,5 +1,5 @@
-@import "global/global-styles.less";
 @import "global/normalize.less";
+@import "global/global-styles.less";
 @import "global/mixins.less";
 @import "global/variables.less";
 
@@ -26,6 +26,9 @@
 //products-nav/details
 @import "blocks/details-container.less";
 @import "blocks/detail-card.less";
+
+//products-nav/details/building-tracks
+@import "blocks/detail-inner.less";
 
 //products-nav/materials
 @import "blocks/materials-container.less";
