--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -1,21 +1,20 @@
 .about {
   min-height: 790px;
-  padding-top: 100px;
-  background: url("../../img/wear-main.png") no-repeat center 100px;
+
   color: @white;
 }
 
 .about__background {
-  margin-top: 100px;
-  margin-bottom: 50px;
-  margin-left: 50px;
-  padding-bottom: 100px
+  margin: 100px 0 50px 0;
+  padding: 96px 0 100px 50px;
+  background: url("../../img/wear-main.jpg") no-repeat;
+  background-size: cover;
+  height: 276px;
+  border-radius: 10px;
 }
 
 .about__text {
-  margin: 0;
-  margin-left: 6px;
-  margin-bottom: 10px;
+  margin: 0 0 10px 6px;
   font-size: 16px;
   line-height: 18px;
   font-weight: normal;
@@ -64,6 +63,15 @@
 }
 
 .about__articles-link {
+  display: inline-table;
   line-height: 19px;
   margin-bottom: 11px;
+  text-decoration: none;
+  border-bottom: 1px solid rgba(176,28,50,.3);
+
+  &:hover, &:focus {
+    color: rgba(176,28,50,.6);
+    border-bottom: 1px solid rgba(176,28,50,.3);
+  }
+
 }
