--- a/less/blocks/article-card.less
+++ b/less/blocks/article-card.less
@@ -1,14 +1,19 @@
 .article-card {
-  padding: 50px;
   margin-bottom: 30px;
   background-color: #FFFFFF;
-  box-shadow: -2px 5px 24px -3px rgba(0,0,0,0.65);
+  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.0965523);
   border-radius: 10px;
+
+  &:hover, :focus {
+    box-shadow: -2px 5px 24px -3px rgba(0,0,0,0.65);
+  }
 }
 
 .article-card__link {
   display: block;
+  padding: 50px;
   text-decoration: none;
+  border-radius: 10px;
 }
 
 .article-card__date {
