--- a/less/blocks/detail-card.less
+++ b/less/blocks/detail-card.less
@@ -1,23 +1,26 @@
 .detail-card {
   width: 31%;
-  margin-right: 30px;
+  margin-right: 40px;
   margin-bottom: 50px;
   border-radius: 10px;
-  box-shadow: -2px 5px 24px -3px rgba(0,0,0,0.65);
+  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.0965523);
+
 
   &:nth-child(3n) {
     margin-right: 0;
   }
 
   &:hover, :focus {
-    box-shadow: -2px 5px 34px 9px rgba(0,0,0,0.65);
+    box-shadow: -2px 5px 24px -3px rgba(0,0,0,0.65);
   }
 }
 
 .detail-card__link {
+  padding-bottom: 20px;
   display: block;
   text-decoration: none;
   color: @black;
+  border-radius: 10px;
 }
 
 .detail-card__img {
@@ -31,6 +34,7 @@
 }
 
 .detail-card__text {
+  margin-bottom: 0;
   font-size: 16px;
   line-height: 25px;
   text-align: center;
