--- a/less/blocks/footer-low.less
+++ b/less/blocks/footer-low.less
@@ -12,7 +12,7 @@
 }
 
 .footer-low__email {
-  display: block;
+ // display: block;
   margin-bottom: 10px;
   color: @red;
   font-size: 16px;
@@ -30,7 +30,7 @@
 }
 
 .footer-low__copyright-link {
-  display: block;
+  display: inline-table;
 
   color: @red;
   font-size: 16px;
@@ -48,6 +48,14 @@
   margin-bottom: 40px;
   display: inline-block;
   font-size: 0;
+
+  &:hover, &:focus {
+    opacity: .6;
+  }
+
+  &:active {
+    opacity: .3;
+  }
 
 }
 
