--- a/less/blocks/footer-top.less
+++ b/less/blocks/footer-top.less
@@ -18,10 +18,14 @@
   font-size: 18px;
   line-height: 25px;
   text-align: left;
+
+  &--margin-top {
+    margin-top: 12px;
+  }
+
 }
 
 .footer-top__cat-menu-link {
-  display: block;
   margin-bottom: 10px;
   color: @red;
   font-size: 16px;
