--- a/less/blocks/gallery-card.less
+++ b/less/blocks/gallery-card.less
@@ -13,6 +13,9 @@
   color: @black;
 }
 
+.gallery-card__link:hover .gallery-card__img {
+  box-shadow: -2px 5px 24px -3px rgba(0,0,0,0.65);
+}
 
 .gallery-card__heading {
   font-size: 18px;
@@ -21,7 +24,11 @@
 
 .gallery-card__img {
   border-radius: 5px;
-  box-shadow: -2px 5px 24px -3px rgba(0,0,0,0.65);
+  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.0965523);
+
+  &:hover, :focus {
+    box-shadow: -2px 5px 24px -3px rgba(0,0,0,0.65);
+  }
 }
 
 .gallery-card__date {
