--- a/less/blocks/material-card.less
+++ b/less/blocks/material-card.less
@@ -2,7 +2,7 @@
   width: 48%;
   margin-right: 30px;
   margin-bottom: 50px;
-  box-shadow: -2px 5px 24px -3px rgba(0,0,0,0.65);
+  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.0965523);
   background-color: #FFFFFF;
   border-radius: 10px;
 
@@ -17,6 +17,10 @@
     flex-basis: 99%;
     margin-bottom: 70px;
     padding: 50px 40px;
+  }
+
+  &:hover, :focus {
+    box-shadow: -2px 5px 24px -3px rgba(0,0,0,0.65);
   }
 
 }
