--- a/less/blocks/services-card.less
+++ b/less/blocks/services-card.less
@@ -3,7 +3,7 @@
   padding-bottom: 45px;
   margin-right: 30px;
   margin-bottom: 50px;
-  box-shadow: -2px 5px 24px -3px rgba(0,0,0,0.65);
+  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.0965523);
   background-color: #FFFFFF;
   border-radius: 10px;
 
@@ -16,6 +16,10 @@
    // flex-direction: column;
    // align-items: center;
     flex-basis: 99%;
+  }
+
+  &:hover, :focus {
+    box-shadow: -2px 5px 24px -3px rgba(0,0,0,0.65);
   }
 
 }
