--- a/less/blocks/sub-nav.less
+++ b/less/blocks/sub-nav.less
@@ -14,16 +14,22 @@
 }
 
 .sub-nav__item {
- // border: 1px solid @light-grey;
+  height: 46px;
   border-radius: 50px;
   margin-right: 25px;
   background-color: #FFFFFF;
-  box-shadow: 9px 8px 31px -10px rgba(0,0,0,0.98);
+  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.0965523);
 
   &--active {
-    border-color: @red;
     a {
       color: @red;
+      border: 2px solid @red;
+      box-shadow: none;
+
+      &:hover {
+        background-color: @white;
+        color: @red;
+      }
     }
   }
 }
@@ -48,8 +54,13 @@
   min-width: 286px;
   height: 42px;
   border-radius: 50px;
-  padding: 0 15px 0;
+  padding: 0 35px 0 15px;
   border: 2px solid rgba(156, 156, 156, 0.5);
+
+  &:hover, &:focus {
+    outline: none;
+    border: 2px solid @red;
+  }
 
 }
 
