added container paddings

--- a/less/blocks/sub-nav.less
+++ b/less/blocks/sub-nav.less
@@ -40,6 +40,7 @@
   text-decoration: none;
   color: @light-grey;
   border-radius: 50px;
+  background-color: @white;
 
   &:hover, &:focus {
     outline: none;
