--- a/less/blocks/material-card.less
+++ b/less/blocks/material-card.less
@@ -16,7 +16,7 @@
     align-items: center;
     flex-basis: 99%;
     margin-bottom: 70px;
-    padding: 50px 40px;
+
   }
 
   &:hover, :focus {
@@ -27,7 +27,7 @@
 
 .materials-card__link {
   display: block;
-  margin: 0 auto 30px;
+  padding-bottom: 45px;
   text-decoration: none;
   color: @black;
 
@@ -35,6 +35,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+    padding: 50px 40px;
   }
 }
 
@@ -50,7 +52,7 @@
       background-repeat: no-repeat;
       width: 16px;
       height: 16px;
-      left: 144px;
+      left: 160px;
       top: 3px;
     }
   }
